--- a/server.cfg
+++ b/server.cfg
@@ -3,7 +3,7 @@ lanmode 0
 rcon_password holama
 maxplayers 1
 port 7777
-hostname Tester
+hostname Tester CW/TG
 gamemode0 Gamemode 1
 filterscripts
 announce 0
