--- a/server.cfg
+++ b/server.cfg
@@ -1,14 +1,15 @@
 echo Executing Server Config...
 lanmode 0
 rcon_password holama
-maxplayers 1
+maxplayers 20
 port 7777
-hostname Tester CW/TG
+hostname | Toxic Warriors | Public Server - Lagshot
 gamemode0 Gamemode 1
 filterscripts
 announce 0
 chatlogging 0
-weburl hola.ww
+weburl 
+lagcomp 0
 onfoot_rate 40
 incar_rate 40
 weapon_rate 40
@@ -16,4 +17,4 @@ stream_distance 300.0
 stream_rate 1000
 maxnpc 0
 logtimeformat [%H:%M:%S]
-language English
+language Latino
