--- a/server.cfg
+++ b/server.cfg
@@ -4,7 +4,7 @@ rcon_password holama
 maxplayers 20
 port 7777
 hostname | Toxic Warriors | Public Server - Lagshot
-gamemode0 Gamemode 1
+gamemode0 Gamemode
 filterscripts
 announce 0
 chatlogging 0
